<resources>
    <string name="app_name">Succinct</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_team">Team</string>
    <string name="nav_map">Map</string>
    <string name="nav_chat">Messaging</string>
    <string name="nav_settings">Settings</string>
    <string name="rock_scan">Scan</string>
    <string name="rock_beep">Beep</string>
    <string name="nav_rock">Iridium Connection</string>
    <string name="rock_disconnect">Disconnect</string>
    <string name="rock_unlock">Enter PIN (1234)</string>
    <string name="rock_send">Send Message</string>
    <string name="rock_send_raw">Send Raw</string>
    <string name="rock_enable">Enable</string>
    <string name="team_status_default">Not currently in a team</string>
    <string name="team_status_in_team">Member of team %1$s</string>
    <string name="identity_card_title">Your identity</string>
    <string name="identity_card_subtitle">Please set before starting or joining a team</string>
    <string name="name">Name</string>
    <string name="team_name">Team Name</string>
    <string name="id">ID</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="scanning_for_teams">Scanning for teams...</string>
    <string name="join">Join</string>
    <string name="start_new_team">Start new team</string>
    <string name="allow_joining">Allow joining</string>
    <string name="identity_summary">&lt;b&gt;Name:&lt;/b&gt; %1$s&lt;br/&gt;&lt;b&gt;ID:&lt;/b&gt; %2$s</string>
    <string name="leave_team">Leave Team</string>
    <string name="end_team">End Team</string>
    <string name="pref_server_location">Server Location</string>
    <string name="pref_sms_destination">Server SMS Number</string>
    <string name="pref_paired_rock">Pair Iridium Tracker</string>
    <string name="pref_location_interval">Location update frequency</string>
    <string name="pref_rock_unpair">Unpair</string>
    <string name="pref_enable_rock">Send via Iridium</string>
    <string name="pref_enable_http">Send via HTTP</string>
    <string name="pref_enable_sms">Send via SMS</string>
    <string name="member_inactive">(Left)</string>
    <string name="peer_not_connected">No Connection</string>
    <string name="peer_connected">Connected</string>
</resources>