<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             tools:context="org.servalproject.succinct.RockFragment">

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/last_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/last_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/enable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rock_enable"/>

    <Button
        android:id="@+id/scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rock_scan"/>

    <Button
        android:id="@+id/unlock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rock_unlock"/>

    <Button
        android:id="@+id/disconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rock_disconnect"/>

    <Button
        android:id="@+id/beep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rock_beep"/>

    <Button
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rock_send"/>

    <Button
        android:id="@+id/send_raw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rock_send_raw"/>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/device_list"/>

</LinearLayout>
