<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusableInTouchMode="true"
        android:descendantFocusability="beforeDescendants"
        android:paddingTop="8dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        tools:context="org.servalproject.succinct.TeamFragment">

        <android.support.v7.widget.CardView
            android:id="@+id/team_status_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="4dp"
            app:contentPadding="16dp">
            <TextView
                android:id="@+id/team_status_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/team_status_default" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/identity_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone"
            app:cardCornerRadius="4dp"
            tools:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:paddingTop="24dp"
                    android:paddingBottom="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/identity_card_title" />

                <TextView
                    android:id="@+id/identity_card_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:text="@string/identity_card_subtitle" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/identity_name_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="16dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/identity_name_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:hint="@string/name" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/identity_id_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/identity_id_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textEmailAddress"
                        android:hint="@string/id" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/identity_save_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    style="?android:borderlessButtonStyle"
                    android:text="@string/save" />

                <Button
                    android:id="@+id/identity_edit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    style="?android:borderlessButtonStyle"
                    android:text="@string/edit"
                    android:visibility="gone" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/team_select_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone"
            app:cardCornerRadius="4dp"
            tools:visibility="visible">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/team_select_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/scanning_for_teams" />

                <FrameLayout
                    android:id="@+id/team_list_frame"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_below="@+id/team_select_text"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_alignParentStart="true">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/team_list"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fadeScrollbars="false"
                        android:scrollbars="vertical"
                        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                        tools:listitem="@layout/team_item"/>

                    <ProgressBar
                        android:id="@+id/team_list_progress_bar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:visibility="gone"
                        tools:visibility="visible" />
                </FrameLayout>

                <Button
                    android:id="@+id/join_team_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/team_list_frame"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    style="?android:borderlessButtonStyle"
                    android:text="@string/join" />

                <Button
                    android:id="@+id/start_new_team_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/team_list_frame"
                    android:layout_toEndOf="@+id/join_team_button"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    style="?android:borderlessButtonStyle"
                    android:text="@string/start_new_team" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/team_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone"
            app:cardCornerRadius="4dp"
            tools:visibility="visible">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp">

                <TextView
                    android:id="@+id/team_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:paddingTop="24dp"
                    android:paddingBottom="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    tools:text="Team A" />

                <LinearLayout
                    android:id="@+id/team_members"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/team_name"
                    android:orientation="vertical"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp">
                </LinearLayout>

                <Switch
                    android:id="@+id/team_allow_joining_switch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/team_members"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="16dp"
                    android:visibility="gone"
                    android:text="@string/allow_joining" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>